--- a/data/poem_data/preprocess_data/preprocess.ipynb
+++ b/data/poem_data/preprocess_data/preprocess.ipynb
@@ -115,12 +115,18 @@
     "        # 연속된 공백 치환\n",
     "        text = re.sub(r\"\\s+\", \" \", text).strip()\n",
     "        \n",
-    "            \n",
+    "        # 개행을 먼저 없애고 그 후 합쳐줌.\n",
     "        re.sub('\\n|\\t|\\r', \"\", text).strip()\n",
     "        re.sub('\\xa0', \" \", text).strip()\n",
+    "\n",
+    "        # 한자어 삭제 및 번역\n",
+    "        hanja_pattern = \"\\u2e80-\\u2eff\\u31c0-\\u31ef\\u3200-\\u32ff\\u3400-\\u4dbf\\u4e00-\\u9fbf\\uf900-\\ufaff\"\n",
+    "        text = re.sub(f\"\\([{hanja_pattern}]+\\)|\\[[{hanja_pattern}]+\\]\", \"\", text)\n",
+    "        text = hanja.translate(text, 'substitution')\n",
+    "\n",
     "        if text:\n",
     "            new.append(text)\n",
-    "    return new"
+    "    return \"\\n\".join(new)"
    ]
   },
   {
