--- a/data/poem_data/preprocess_data/preprocess.ipynb
+++ b/data/poem_data/preprocess_data/preprocess.ipynb
@@ -119,11 +119,6 @@
     "        re.sub('\\n|\\t|\\r', \"\", text).strip()\n",
     "        re.sub('\\xa0', \" \", text).strip()\n",
     "\n",
-    "        # 한자어 삭제 및 번역\n",
-    "        hanja_pattern = \"\\u2e80-\\u2eff\\u31c0-\\u31ef\\u3200-\\u32ff\\u3400-\\u4dbf\\u4e00-\\u9fbf\\uf900-\\ufaff\"\n",
-    "        text = re.sub(f\"\\([{hanja_pattern}]+\\)|\\[[{hanja_pattern}]+\\]\", \"\", text)\n",
-    "        text = hanja.translate(text, 'substitution')\n",
-    "\n",
     "        if text:\n",
     "            new.append(text)\n",
     "    return \"\\n\".join(new)"
@@ -186,7 +181,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "total = pd.concat([sinchun, adult, teen])"
+    "from_teen.to_csv(\"teen.csv\")\n",
+    "from_modern_poems.to_csv(\"modern_poems.csv\")\n",
+    "from_dica_poems.to_csv(\"dica_poems.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data = pd.concat([from_teen, from_modern_poems])\n",
+    "train_data.to_csv(\"train.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5. 기타 전처리\n",
+    "인터넷 게시판의 시를 크롤링 했기에, 코드 외적으로 수정할 부분들이 많았습니다.<br>\n",
+    "____, ----, ++++, 등으로 시작하는 분리(?) 마커 뒤에 개인적인 시에 대한 코멘트를 덧붙이는 경우,<br>\n",
+    "dica_poems는 작가명(개인정보)이 같이 크롤링 된 경우,<br>\n",
+    "주석을 단어에 *, 1) 등의 표시를 해둔 후 글 마지막에 설명하는 경우 등이 있었습니다.<br>\n",
+    "또한, 현대시 형식으로 띄어쓰기 없이 작성된 시들, 특수문자만 사용한 시들 등은 상당부분 직접 확인하고 삭제했습니다."
    ]
   }
  ],
